--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,15 +6,11 @@ project(
     LANGUAGES CXX
 )
 
-set(COKE_LIBRARY_DIR ${PROJECT_BINARY_DIR}/lib)
-set(COKE_INCLUDE_DIR ${PROJECT_BINARY_DIR}/include)
-
 set(CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING "cmake build type")
 set(CMAKE_SKIP_RPATH TRUE)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-unused-parameter")
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${COKE_LIBRARY_DIR})
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${COKE_LIBRARY_DIR})
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})
 
 find_package(Workflow REQUIRED)
 find_package(OpenSSL REQUIRED)
@@ -25,3 +21,21 @@ include_directories(${OPENSSL_INCLUDE_DIR})
 include_directories(${COKE_INCLUDE_DIR})
 
 add_subdirectory(src)
+
+include(GNUInstallDirs)
+include(CMakePackageConfigHelpers)
+
+set(CPACK_GENERATOR "RPM")
+set(CPACK_PACKAGE_NAME "fcopy")
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "fcopy: copy file to remote server")
+set(CPACK_PACKAGE_VENDOR "kedixa")
+set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
+# set(CPACK_RPM_PACKAGE_GROUP "")
+set(CPACK_RPM_PACKAGE_URL "https://github.com/kedixa/fcopy/")
+# set(CPACK_RPM_PACKAGE_DESCRIPTION "")
+set(CPACK_RPM_PACKAGE_LICENSE "TODO")
+set(CPACK_RPM_FILE_NAME RPM-DEFAULT)
+set(CPACK_RPM_PACKAGE_RELEASE_DIST ON)
+set(CPACK_RPM_PACKAGE_RELEASE "0")
+
+include(CPack)
