Supports formatted log printing, and the client supports specifying multiple files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,6 +10,7 @@ add_executable(fcopy-server
     fcopy_message.cpp
     file_manager.cpp
     co_fcopy.cpp
+    common.cpp
 )
 
 add_executable(fcopy-cli
